# ACT4E-mcdp-exercise-template

./: .gitignore  README.md  extra_info.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
src/act4e_mcdp_solution/: __init__.py  solution.py  solver_dp.py  solver_mcdp.py
